lib/tests/fixtures/compiler/parser/illegal_app_name.baseline
Error: illegal_app_name.pp:1:13: '::foo' is not a valid name for an application.
  application ::foo {
              ^~~~~
